--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_a_valider.html.twig
@@ -30,8 +30,11 @@
     </tbody>
 </table>
 </div>
+
 <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
 <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+<script type="application/javascript" src="//cdn.datatables.net/plug-ins/1.10.9/api/page.jumpToData().js"></script>
 <script type="application/javascript" src="{{ asset("/js/liste_classeurs.js") }}"></script>
 <script type="application/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
 <script type="application/javascript" src="//cdn.datatables.net/plug-ins/1.10.7/sorting/datetime-moment.js"></script>
+
