--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
@@ -35,8 +35,8 @@
                 </div>
             </div>
         </div>
-
         {% for circuit_user in circuit_users %}
+           circuit user {{ circuit_user }}
             {% if circuit_user is not empty %}
                 {# Etapes validées #}
                 <div class="well etapes-circuit">
@@ -61,7 +61,7 @@
 
         <div id="contetapes">
 
-            {% if edit and classeur_status != 0 %}
+            {% if edit and classeur_status != 0 and classeur_status != 4 %}
                 {# Etape en cours #}
                 <div class="well etapes-circuit etape-validante">
                     <span class="valid_perso glyphicon glyphicon-pencil"></span>
