--- a/src/Sesile/UserBundle/Resources/views/UserPack/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/UserPack/edit.html.twig
@@ -22,7 +22,8 @@
                     -->
                     <select class="js-example-basic-multiple required" style="width: 100%" data-placeholder="Cliquer ici pour ajouter un utilisateur" multiple="multiple" id="listUsers" name="listUsers">
                         {% for user in users %}
-                            <option value="{{ user.id }}"{% if user in userPack.users %}  selected {% endif %}>{{ user.prenom}} {{ user.nom }}</option>
+
+                            <option value="{{ user.id }}" {% if user in userPack.users %}  selected {% endif %}>{{ user.nom }} {{ user.prenom}}</option>
                         {% endfor %}
                     </select>
                 </div>
