--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -23,7 +23,7 @@
                     <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}">
                         <optgroup label="Groupes d'utilisateurs">
                             {% for userPack in userPacks %}
-                                <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe">{{ userPack.nom }}</option>
+                                <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe"><i class="fa fa-group"></i>{{ userPack.nom }}</option>
                             {% endfor %}
                         </optgroup>
                         <optgroup label="utilisateurs">
@@ -40,7 +40,8 @@
             {% endfor %}
             <input type="hidden" name="valeurs" id="valeurs">
             <div class="{#col-lg-2 #}text-center div-btn-ajout-etape">
-                <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+                <button type="button" class="btn btn-circle-lg btn-info" id="addetape"><span class="glyphicon glyphicon-plus"></span> </button>
+
             </div>
         </div>
 
@@ -53,7 +54,12 @@
 <link rel="stylesheet" href="{{ asset('/css/circuit.css') }}"/>
 <script>
     $(document).ready(function() {
-
+        $('#addetape').popover({
+            trigger: 'hover',
+            container: 'body',
+            content: 'Ajouter une étape',
+            placement: 'bottom'
+        });
         scrollFrisque();
 
 
@@ -88,19 +94,76 @@
             /*
              A chaque fois qu'on clique sur le bouton bleu une nouvelle etape de validation se crée
              */
+
+            $('#addetape').popover('destroy');
+
             $(this).parent().remove();
             var contetapes = $('#contetapes');
 
             contetapes.append('' +
             '<div class="well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.nom }} {{ user.prenom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
-            '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button></div>');
+            '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-circle-lg btn-info dyn" id="addetape"><span class="glyphicon glyphicon-plus"></span></button></div>');
+            $('.dyn').popover('destroy');
+            $('.dyn').popover({
+                trigger: 'hover',
+                container: 'body',
+                content: 'Ajouter une étape',
+                placement: 'bottom'
+            });
+
 
             scrollFrisque();
 
-            $("select.selusers").select2();
+            function formatState (state) {
+
+                if (!state.id) { return state.text; }
+                var tabType = state.id.split('-');
+
+                if(tabType[0] == 'user')
+                {
+                    return '<span><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;'+ state.text+'</span>';
+                }
+                else{
+                    return '<span data-toggle="popover" style="display: block" data-id="'+tabType[1]+'"><i class="fa fa-group"></i>&nbsp;&nbsp;'+ state.text+'</span>';
+                }
+
+            };
+
+
+            $("select.selusers").select2({
+                formatResult: formatState,
+                formatSelection:formatState
+
+            });
+
+
+
+            initPopover();
+            $(".selusers").on("select2-selecting", function () {
+                $('[data-toggle="popover"]').popover('destroy');
+                initPopover();
+
+                //alert('select')
+            });
+
+            $(".selusers").on("select2-close", function () {
+                //alert('close')
+                initPopover();
+
+            });
+            $(".selusers").on("select2-open", function () {
+                initPopover();
+
+            });
 
             e.stopImmediatePropagation();
             creerFleches()
+
+            $(".selusers").on("select", function () {
+
+                $('#seeAllUsers').trigger('click')
+
+            });
         });
 
 
@@ -154,7 +217,22 @@
             }).disableSelection();
         });
 
+/*
+        $(document).on("click",$(".react"), function(e) {
+                alert('test')
+        });
+        */
+/*
 
-
+        $.ajax({
+            url: Routing.generate('show_userpack', {id: 1}),
+            method: "GET",
+            success:function(resp){
+                $.each (resp,function(index,value){
+                   alert(value);
+                });
+            }
+        });
+*/
     });
 </script>
