--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -22,6 +22,7 @@
     <script src="{{ asset('/js/lettering.js') }}"></script>
     <script src="{{ asset('/js/textillate.js') }}"></script>
     <script src="{{ asset('/js/jquery.confirm.min.js') }}"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!--[if gte IE 9]>
     <style type="text/css">
         .gradient {
