--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -20,7 +20,7 @@
 
                     <div class="text-center"><h4>Etape</h4></div>
                     {#<input type="hidden" name="etape_id" value="{{ etape.id }}">#}
-                    <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}" required="required">
+                    <select class="selusers" multiple="multiple" style="width: 100%" data-etape="{{ etape.id }}" required="required" title="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer">
                         <optgroup label="Groupes d'utilisateurs">
                             {% for userPack in userPacks %}
                                 <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe"><i class="fa fa-group"></i>{{ userPack.nom }}</option>
@@ -40,7 +40,7 @@
             {% endfor %}
             <input type="hidden" name="valeurs" id="valeurs">
             <div class="{#col-lg-2 #}text-center div-btn-ajout-etape">
-                <button type="button" class="btn btn-circle-lg btn-info" id="addetape"><span class="glyphicon glyphicon-plus"></span> </button>
+                <button type="button" class="btn btn-circle-lg btn-info first" id="addetape"><span class="glyphicon glyphicon-plus"></span> </button>
 
             </div>
         </div>
@@ -54,7 +54,7 @@
 <link rel="stylesheet" href="{{ asset('/css/circuit.css') }}"/>
 <script>
     $(document).ready(function() {
-        $('#addetape').popover({
+        $('.first').popover({
             trigger: 'hover',
             container: 'body',
             content: 'Ajouter une étape',
@@ -95,13 +95,13 @@
              A chaque fois qu'on clique sur le bouton bleu une nouvelle etape de validation se crée
              */
 
-            $('#addetape').popover('destroy');
-
+            $('.first').popover('destroy');
+            $('.dyn').popover('destroy');
             $(this).parent().remove();
             var contetapes = $('#contetapes');
 
             contetapes.append('' +
-            '<div class="well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" required="required" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.nom }} {{ user.prenom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
+            '<div class="well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" required="required" title="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.nom }} {{ user.prenom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
             '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-circle-lg btn-info dyn" id="addetape"><span class="glyphicon glyphicon-plus"></span></button></div>');
             $('.dyn').popover('destroy');
             $('.dyn').popover({
@@ -110,7 +110,6 @@
                 content: 'Ajouter une étape',
                 placement: 'bottom'
             });
-
 
             scrollFrisque();
 
@@ -158,12 +157,6 @@
 
             e.stopImmediatePropagation();
             creerFleches()
-
-            $(".selusers").on("select", function () {
-
-                $('#seeAllUsers').trigger('click')
-
-            });
         });
 
 
