--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/validation.html.twig
@@ -102,7 +102,7 @@
                         <span class="glyphicon glyphicon-user etape-groupe" title="Cliquez pour voir les utilisateurs de l'étape"></span>
                     {% endif %}
 
-                    <select class="selusers{% if etape.countUserPacksUsers() > 3 %} etape-groupe-users{% endif %}" multiple="multiple" style="width: 100%;{% if etape.countUserPacksUsers() > 3 %} display: none;{% endif %}" data-etape="{{ etape.id }}" {% if edit != true %}disabled="disabled"{% endif %}>
+                    <select class="selusers{% if etape.countUserPacksUsers() > 3 %} etape-groupe-users{% endif %}" required="required" title="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" multiple="multiple" style="width: 100%;{% if etape.countUserPacksUsers() > 3 %} display: none;{% endif %}" data-etape="{{ etape.id }}" {% if edit != true %}disabled="disabled"{% endif %}>
                         <optgroup label="Groupes d'utilisateurs">
                             {% for userPack in userPacks %}
                                 <option value="userpack-{{ userPack.id }}" {% if userPack in etape.userPacks %} selected{% endif %} data-type="groupe" title="Voir les utilisateurs du groupe">
@@ -125,7 +125,7 @@
             {% if edit %}
                 <input type="hidden" name="valeurs" id="valeurs">
                 <div class="text-center div-btn-ajout-etape">
-                    <button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button>
+                    <button type="button" class="btn btn-circle-lg btn-info first" id="addetape"><span class="glyphicon glyphicon-plus"></span> </button>
                 </div>
             {% endif %}
         </div>
@@ -154,9 +154,9 @@
 </div>
 
 <script type="application/javascript" src="{{ asset("/js/select2.min.js") }}"></script>
-<script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
-<script type="text/javascript" src="{{ asset('/js/jquery.mousewheel.min.js') }}"></script>
 
+<script type="text/javascript" src="{{ asset('/js/jquery.mousewheel.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/js/circuit_etape.js') }}"></script>
 <script>
     $(document).ready(function() {
 
@@ -164,6 +164,12 @@
         /*
          * Initialisations
          */
+        $('.first').popover({
+            trigger: 'hover',
+            container: 'body',
+            content: 'Ajouter une étape',
+            placement: 'bottom'
+        });
         aff_button_valider();
         $('.list-validants').hide();
         scrollFrisque();
@@ -237,13 +243,63 @@
             /*
              A chaque fois qu'on clique sur le bouton bleu une nouvelle etape de validation se crée
              */
+            $('.first').popover('destroy');
+            $('.dyn').popover('destroy');
             $(this).parent().remove();
 
             $('#contetapes').append('' +
-            '<div class="well etapes-circuit"><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><div class="text-center"><h4>Etape de validation</h4></div><select class="selusers" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.nom }} {{ user.prenom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
-            '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-info btn-ajout-etape" id="addetape"><span class="glyphicon glyphicon-plus-sign"></span><br>Ajouter une étape</button></div>');
-            $("select.selusers").select2();
+            '<div class="well etapes-circuit"><div class="text-center"><h4>Etape</h4></div><select class="selusers" required="required" title="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" x-moz-errormessage="merci de renseigner au moins un utilisateur dans l\'étape vide ou de la supprimer" multiple="multiple" style="width: 100%" data-etape="0"><optgroup label="Groupes d\'utilisateurs">{% for userPack in userPacks %}<option value="userpack-{{ userPack.id }}" data-type="groupe">{{ userPack.nom }}</option>{% endfor %}</optgroup><optgroup label="utilisateurs">{% for user in users %}<option value="user-{{ user.id }}" data-type="user">{{ user.nom }} {{ user.prenom }}</option>{% endfor %}</optgroup></select><button type="button" class="btn btn-danger btn-suppetape" id="suppetape"><span class="glyphicon glyphicon-remove"></span></button><button type="button" class="btn btn-info btn-block btn-voirInter" id="seeUsers"><span class="glyphicon glyphicon-plus-sign"></span> Voir les intervenants</button><button type="button" class="btn btn-info btn-block btn-voirInter" id="hiddeUsers" style="display:none;"><span class="glyphicon glyphicon-minus-sign"></span> Cacher les intervenants</button></div>' +
+            '<div class="text-center div-btn-ajout-etape"><button type="button" class="btn btn-circle-lg btn-info dyn" id="addetape"><span class="glyphicon glyphicon-plus"></span></button></div>');
+            $('.dyn').popover('destroy');
+            $('.dyn').popover({
+                trigger: 'hover',
+                container: 'body',
+                content: 'Ajouter une étape',
+                placement: 'bottom'
+            });
 
+            function formatState (state) {
+
+                if (!state.id) { return state.text; }
+                var tabType = state.id.split('-');
+
+                if(tabType[0] == 'user')
+                {
+                    return '<span><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;'+ state.text+'</span>';
+                }
+                else{
+                    return '<span data-toggle="popover" style="display: block" data-id="'+tabType[1]+'"><i class="fa fa-group"></i>&nbsp;&nbsp;'+ state.text+'</span>';
+                }
+
+            };
+
+
+            $("select.selusers").select2({
+                formatResult: formatState,
+                formatSelection:formatState
+
+            });
+
+
+
+            initPopover();
+            $(".selusers").on("select2-selecting", function () {
+                $('[data-toggle="popover"]').popover('destroy');
+                initPopover();
+
+                //alert('select')
+            });
+
+            $(".selusers").on("select2-close", function () {
+                //alert('close')
+                initPopover();
+
+            });
+            $(".selusers").on("select2-open", function () {
+                initPopover();
+
+            });
+            creerFleches()
             scrollFrisque();
             // Pour savoir si on valide ou si on signe
             aff_button_valider();
@@ -281,7 +337,17 @@
                         });
                     });
                 } else {
+//alert($(this).parent().find('h4').attr('class'))
+                    var moncul = $(this).parent().find('h4');
+                    $(this).parent().find('h4').tooltip();
+                    $(this).parent().find('h4').tooltip('show');
+
+                    setTimeout(function(){moncul.tooltip('hide');},3000);
+                  //  $('[data-toggle="tooltip"]').tooltip();
+                   // $('[data-toggle="tooltip"]').tooltip('show');
+                    //alert($(this).parent().attr('class'))
                     e.preventDefault();
+
                 }
                 tabGeneral.push(Etapes);
             });
@@ -317,8 +383,8 @@
                 $(".btn-valider-non-signer").css('display', 'inline-block');
             }
         }
-
-
+$('#circuit_etapes').scrollLeft = 10
+//        $("#circuit_etapes").scrollWidth($("#circuit_etapes").scrollLeft())
     });
+
 </script>
-<script type="text/javascript" src="{{ asset('/js/circuit_etape.js') }}"></script>
