--- a/src/Sesile/DelegationsBundle/Resources/views/Notifications/delegationSuppression.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Notifications/delegationSuppression.html.twig
@@ -1,3 +1,2 @@
 Bonjour {{ delegation.user.prenom }} {{ delegation.user.nom }},<br><br>
-{{ delegation.delegant.prenom }} {{ delegation.delegant.nom }} a supprimé la délégation qu'il vous avez donné et qui était prévue du {{ delegation.debut|date('d/m/Y') }} au {{ delegation.fin|date('d/m/Y') }}
-
+{{ delegation.delegant.prenom }} {{ delegation.delegant.nom }} a supprimé la délégation qui vous avait été donné et qui était prévue du {{ delegation.debut|date('d/m/Y') }} au {{ delegation.fin|date('d/m/Y') }}
