--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="{{ asset('css/animate.css') }}"/>
     <script type="text/javascript" src="{{ asset("/js/jquery-2.0.3.min.js") }}"></script>
+    <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset("/bootstrap/js/bootstrap.min.js") }}"></script>
     <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
     <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
