--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -7,7 +7,7 @@
             &nbsp;&nbsp;&nbsp;Liste des classeurs
         </div>
         {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
-        <a href="{{ path('classeur_new') }}">
+        <a href="{{ path('classeur_new') }}" id="addClasseur">
             <button type="button" class="btn btn-default navbar-btn">
                 Ajouter un classeur
             </button>
