--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -10,6 +10,10 @@
 
 <h3>{{ classeur.nom }}</h3>
 
+<div class='pull-right' id="help">
+    <br/>
+    <button type="button" class="btn btn-info" data-dismiss="modal">Le bouton Signer et Valider le classeur ne s’affiche pas… cliquez ici</button>
+</div>
 <div class='pull-right' id="bouttons" style="display:none">
     <br/>
     <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
@@ -53,6 +57,41 @@
 
 
 </form>
+
+<div class="modal fade" id="IEModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Aide</h4>
+            </div>
+            <div class="modal-body">
+                Le problème est probablement dû à un blocage des composants JAVA du navigateur, voici comment le résoudre:<br><br>
+                <img src="{{ asset("/images/iesc.jpg") }}"/>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Aide</h4>
+            </div>
+            <div class="modal-body">
+                Le problème est probablement dû à un blocage des composants JAVA du navigateur, voici comment le résoudre:<br><br>
+                <img src="{{ asset("/images/ffsc.jpg") }}"/>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
+            </div>
+        </div>
+    </div>
+</div>
 {{ url_applet }}
 <script type="text/javascript" src="http://www.java.com/js/deployJava.js">
 </script>
@@ -89,12 +128,41 @@
 
         }
         divcertif.appendChild(selectcertif);
+        $('#help').hide();
         $('#bouttons').show('slow');
         setStatusText('Pret à signer');
 
 
     }
 
+
+    function msieversion() {
+
+        var ua = window.navigator.userAgent;
+        var msie = ua.indexOf("MSIE ");
+
+        if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./)) {      // If Internet Explorer, return version number
+//                    alert(parseInt(ua.substring(msie + 5, ua.indexOf(".", msie))));
+            return true;
+        }
+        else {                 // If another browser, return 0
+//                    alert('otherbrowser');
+            return false;
+        }
+
+
+    }
+
+    $('#help').click(function(){
+        if(msieversion())
+        {
+            $('#IEModal').modal('show');
+        }
+        else{
+            $('#myModal').modal('show')
+        }
+
+    });
 
     //function pour faire apparaître le bouton signer
     function test() {
