moification TTL pour API OVH création de sous domaine + helper signature

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -12,7 +12,7 @@
 
 <div class='pull-right' id="help">
     <br/>
-    <button type="button" class="btn btn-info" data-dismiss="modal">Le bouton Signer et Valider le classeur ne s’affiche pas… cliquez ici</button>
+    <button type="button" class="btn btn-danger" data-dismiss="modal"><span class="glyphicon glyphicon-warning-sign"></span>&nbsp;&nbsp;Si le bouton Signer et Valider le classeur ne s’affiche pas… cliquez ici</button>
 </div>
 <div class='pull-right' id="bouttons" style="display:none">
     <br/>
