screen shot ie taille

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -58,8 +58,8 @@
 
 </form>
 
-<div class="modal fade" id="IEModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
+<div class="modal fade col-lg-12" id="IEModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-lg col-lg-12" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -67,7 +67,7 @@
             </div>
             <div class="modal-body">
                 Le problème est probablement dû à un blocage des composants JAVA du navigateur, voici comment le résoudre:<br><br>
-                <img src="{{ asset("/images/iesc.jpg") }}"/>
+                <img src="{{ asset("/images/iesc.jpg") }}" width="100%"/>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
