Mantis #0002645 : classeur à valider par un intermédiaire : suppression d'une étape

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
@@ -19,7 +19,7 @@
             </button>
 
             <button type="submit" class="btn btn-danger" data-toggle="modal" data-target="#fenetreModal"
-                    data-whatever="@mdo" class=".bs-example-modal-lg">
+                    data-whatever="@mdo" {#class=".bs-example-modal-lg"#}>
                 <span class="glyphicon glyphicon-remove"></span>
                 &nbsp;Refuser
             </button>
@@ -38,9 +38,14 @@
 
         {% elseif classeur.status != 2 %}
 
-            <button type="submit" class="btn btn-success btn-valider" data-action="{{ path("classeur_valider") }}">
+            <button type="submit" class="btn btn-success btn-valider btn-valider-non-signer" data-action="{{ path("classeur_valider") }}">
                 <span class="glyphicon glyphicon-ok"></span>
                 &nbsp;Valider
+            </button>
+
+            <button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
+                <span class="glyphicon glyphicon-ok"></span>
+                &nbsp;Valider et Signer
             </button>
             {#<button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
                 <span class="glyphicon glyphicon-ok"></span>
